src/css/VideoList.css
.videolist-container {
  width: 100%;
  height: calc(100vh - 70px);
  margin-top: 70px;
  overflow-y: auto;
  display: grid;
  gap: 20px;
  padding: 20px;
  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
}

.videolist {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
  overflow: auto;
  padding: 10px;
  gap: 10px;
  width: 30%;
}

@media (max-width: 1000px) {
  .videolist-container {
    padding-bottom: 100px;
  }

  .videolist {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: auto;
    overflow: visible;
    width: 100%;
  }
}

